Runnable but not completely working
Significant improvements to both the Alignment and Existing image workflow, allowing multiple paths through the dialog boxes and reducing the amount of repetative information requests to the user.